Use system property to calculate test-ids location